[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/background1.png" type="Texture" id=1]
[ext_resource path="res://sprites/base.png" type="Texture" id=2]
[ext_resource path="res://sprites/btn_normal.png" type="Texture" id=3]
[ext_resource path="res://sprites/btn_hover.png" type="Texture" id=4]
[ext_resource path="res://sprites/btn_pressed.png" type="Texture" id=5]
[ext_resource path="res://fonts/tt0524m_.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://screens/PreCombatScreen.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[node name="PreCombatScene" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 541 )
texture = ExtResource( 1 )

[node name="denaros" type="Label" parent="Background"]
margin_left = -812.0
margin_top = -491.0
margin_right = -708.0
margin_bottom = -402.0
custom_fonts/font = SubResource( 4 )
text = "10"
align = 1
valign = 1

[node name="life" type="Label" parent="Background"]
margin_left = -605.0
margin_top = -492.0
margin_right = -486.0
margin_bottom = -403.0
rect_pivot_offset = Vector2( -1247, -220 )
custom_fonts/font = SubResource( 5 )
text = "100"
align = 1
valign = 1

[node name="turn" type="Label" parent="Background"]
margin_left = -424.0
margin_top = -484.0
margin_right = -312.0
margin_bottom = -416.0
custom_fonts/font = SubResource( 6 )
text = "asdfasd"
align = 1
valign = 1

[node name="slot_market_03" type="Sprite" parent="."]
position = Vector2( 720, 854 )
texture = ExtResource( 2 )

[node name="slot_market_02" type="Sprite" parent="."]
position = Vector2( 880, 854 )
texture = ExtResource( 2 )

[node name="slot_market_01" type="Sprite" parent="."]
position = Vector2( 1040, 854 )
texture = ExtResource( 2 )

[node name="slot_market_00" type="Sprite" parent="."]
position = Vector2( 1200, 854 )
texture = ExtResource( 2 )

[node name="slot_battle_05" type="Sprite" parent="."]
position = Vector2( 640, 594 )
texture = ExtResource( 2 )

[node name="slot_battle_04" type="Sprite" parent="."]
position = Vector2( 800, 594 )
texture = ExtResource( 2 )

[node name="slot_battle_03" type="Sprite" parent="."]
position = Vector2( 960, 594 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 150, 20 )

[node name="slot_battle_02" type="Sprite" parent="."]
position = Vector2( 1120, 594 )
texture = ExtResource( 2 )

[node name="slot_battle_01" type="Sprite" parent="."]
position = Vector2( 1280, 593 )
texture = ExtResource( 2 )

[node name="slot_reserve_03" type="Sprite" parent="."]
position = Vector2( 800, 334 )
texture = ExtResource( 2 )

[node name="slot_reserve_02" type="Sprite" parent="."]
position = Vector2( 960, 334 )
texture = ExtResource( 2 )

[node name="slot_reserve_01" type="Sprite" parent="."]
position = Vector2( 1120, 334 )
texture = ExtResource( 2 )

[node name="btn_roll" type="TextureButton" parent="."]
margin_left = 466.0
margin_top = 934.0
margin_right = 734.0
margin_bottom = 1060.0
rect_pivot_offset = Vector2( 134, 63 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="btn_roll"]
anchor_left = 0.037
anchor_top = 0.079
anchor_right = 0.966
anchor_bottom = 0.921
margin_left = 0.0839996
margin_top = 0.0459995
margin_right = 0.112
margin_bottom = -0.0460052
custom_fonts/font = SubResource( 1 )
text = "RODAR"
align = 1
valign = 1

[node name="btn_sell" type="TextureButton" parent="."]
margin_left = 831.0
margin_top = 935.0
margin_right = 1099.0
margin_bottom = 1061.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_editor_description_": "dsafdsfsdfasdfsdafsd"
}

[node name="Label" type="Label" parent="btn_sell"]
anchor_left = 0.041
anchor_top = 0.087
anchor_right = 0.966
anchor_bottom = 0.913
margin_left = 0.0120001
margin_top = 0.0379992
margin_right = 0.112
margin_bottom = -0.0380096
custom_fonts/font = SubResource( 2 )
text = "VENDER"
align = 1
valign = 1

[node name="btn_battle" type="TextureButton" parent="."]
margin_left = 1188.0
margin_top = 934.0
margin_right = 1456.0
margin_bottom = 1060.0
rect_pivot_offset = Vector2( 130, 63 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="btn_battle"]
margin_left = 10.0
margin_top = 12.0
margin_right = 257.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 3 )
text = "BATALHA"
align = 1
valign = 1

[connection signal="pressed" from="btn_roll" to="." method="_on_btn_roll_pressed"]
[connection signal="pressed" from="btn_sell" to="." method="_on_btn_sell_pressed"]
[connection signal="pressed" from="btn_battle" to="." method="_on_btn_battle_pressed"]
